test/yaml/testdata/output/buffer/multiple-listeners.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: eg
  listeners:
  - hostname: example.com
    name: example-com-http
    port: 80
    protocol: HTTP
  - hostname: example.com
    name: example-com-https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: tls-secret
  - hostname: test.example.com
    name: test-example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buffer-ingress-example-com
  namespace: namespace1
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /upload
    name: rule-0-prefix-upload
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: not-buffer-ingress-test-example-com
  namespace: namespace1
spec:
  hostnames:
  - test.example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: buffer-ingress-example-com
  namespace: namespace1
spec:
  requestBuffer:
    limit: 100m
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: buffer-ingress-example-com
status:
  ancestors: null
